# lazydata

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  state.rs  style.rs
src/components/: tabs.rs
src/crud/: executor.rs  mod.rs  postgres.rs
src/database/: connector.rs  detector.rs  fetch.rs  mod.rs  pool.rs
src/layout/: data_table.rs  mod.rs  query_editor.rs  sidebar.rs
src/utils/: highlighter.rs  mod.rs  query_timer.rs  query_type.rs
