[package]
name = "lazydata"
version = "0.1.0"
description = "a cli tool for database systems"
authors = ["Ye Lin Ko <yelinko.2002@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
color-eyre = "0.6.3"
colored = "3.0"
clap = { version = "4.5.37", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles"
] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
inquire = "0.7.5"
ratatui = "0.29.0"
sqlx = { version = "0.8.3", features = ["postgres", "mysql", "sqlite", "runtime-tokio","chrono", "macros","tls-rustls","uuid"] }
strum = "0.27"
tokio = { version = "1.44.2", features = ["full"] }
unicode-width = "0.2.0"
rmpv = "1.3.0"
tui-tree-widget = "0.23.0"
tui-textarea = "0.7.0"
serde_json = "1.0.140"
